# calibrate-google-trends

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
config/: main.yaml
docs/: conf.py  modules.rst
examples/: query_demo.ipynb
gtab/: __init__.py  netative_trend_search.py  trend_search.py
gtab_config/logs/: log_geo=_timeframe=2016-01-01 2018-07-31.txt  log_geo=_timeframe=2016-06-01 2018-12-31.txt
scripts/: run.py
